test/good/modules/attr01.px

cos = math.cos
print cos(0)
