test/bad/modules/attr01.px

print math.CHAITIN_OMEGA
